# plexify

./: .gitignore  .plexifyignore.example  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  plexify.sh
.github/: CONTRIBUTING.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
_queue/: 45f0f9d8-07d0-45b6-ad7f-f1314de0c81e.job  471eb9c7-e7c7-4678-a1c2-16d34da35ff2.job  7f6d7aff-7d9f-43e3-b843-cbf3f3eb7b0b.job  e267099e-6e82-408f-9cbc-42a0cf4a5c34.job
benches/: validate_bench.rs
scripts/: README.md  Update-Plexify.ps1  install-plexify.sh  test-workflow.sh  update-plexify.sh
src/: ignore.rs  lib.rs  main.rs
src/commands/: add.rs  clean.rs  job_processor.rs  mod.rs  naming_rules.rs  scan.rs  validate.rs  work.rs
src/config/: mod.rs
src/ffmpeg/: mod.rs
src/job/: mod.rs
src/queue/: mod.rs
src/worker/: mod.rs
tests/: integration_tests.rs
