[package]
name = "plexify"
version = "0.1.0"
edition = "2021"
description = "A simple, distributed media transcoding CLI tool"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Weibye/plexify"
repository = "https://github.com/Weibye/plexify"
keywords = ["media", "transcoding", "ffmpeg", "cli", "plex"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.0"
rayon = "1.8"
glob = "0.3"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.8"

[[bench]]
name = "validate_bench"
harness = false

[profile.release]
# Optimize for performance and small binary size
lto = true
codegen-units = 1
panic = "abort"
strip = true
